touch/src/styles/settings.scss
::-webkit-scrollbar {
  width: 8px;
}
/* Track */
::-webkit-scrollbar-track {
  background: transparent;
}
/* Handle */
::-webkit-scrollbar-thumb {
  border-radius: 25px;
  background: rgb(var(--v-theme-surface-bright));
}
/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: rgb(var(--v-theme-primary));
}

